[package]
name = "tetrix"
version = "0.1.0"
authors = ["Kevin Mooney <kmooney@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"
uuid={version = "0.8.1", features = ["serde", "v4"]}
log = "0.4.6"
simple_logger = "1.11.0"